Added api client interface and fixed issue in integer mapping

--- a/src/main/resources/hellofreshphp/APIClient.mustache
+++ b/src/main/resources/hellofreshphp/APIClient.mustache
@@ -4,7 +4,7 @@
  */
 namespace Hellofresh\Client\Api;
 
-class APIClient
+class APIClient implements IAPIClient
 {
     public static $POST = "POST";
     public static $GET = "GET";
