--- a/src/main/resources/hellofreshphp/api.mustache
+++ b/src/main/resources/hellofreshphp/api.mustache
@@ -86,7 +86,7 @@ class {{classname}}
             return null;
         }
 
-        $responseObject = $this->apiClient->deserialize($response,'{{returnType}}');
+        $responseObject = $this->apiClient->deserialize($response,'Hellofresh\Client\Api\Models\{{returnType}}');
         return $responseObject;
         {{/returnType}}
     }
