--- a/src/main/resources/hellofreshphp/APIClient.mustache
+++ b/src/main/resources/hellofreshphp/APIClient.mustache
@@ -69,7 +69,7 @@ class APIClient implements IAPIClient
         curl_setopt($curl, CURLOPT_TIMEOUT, 0);
         // return the result on success, rather than just TRUE
         curl_setopt($curl, CURLOPT_RETURNTRANSFER, true);
-        curl_setopt($curl, CURLOPT_HTTPHEADER, $headers);
+        curl_setopt($curl, CURLOPT_HTTPHEADER, $curlHeaders);
 
         if (!empty($queryParams)) {
             $url = ($url . '?' . http_build_query($queryParams));
