--- a/src/main/resources/hellofreshphp/api.mustache
+++ b/src/main/resources/hellofreshphp/api.mustache
@@ -23,7 +23,7 @@ class {{classname}}
       {{#allParams}}
       * @param {{dataType}} ${{paramName}} {{description}} ({{^optional}}required{{/optional}}{{#optional}}optional{{/optional}})
       {{/allParams}}
-      * @return {{returnType}}
+      * @return Hellofresh\Client\Api\Models\{{returnType}}
       */
     public function {{nickname}}({{#allParams}}${{paramName}}{{#optional}}=null{{/optional}}{{#hasMore}}, {{/hasMore}}{{/allParams}}, $inputHeaderParams=null)
     {
@@ -86,7 +86,13 @@ class {{classname}}
             return null;
         }
 
-        $responseObject = $this->apiClient->deserialize($response,'Hellofresh\Client\Api\Models\{{returnType}}');
+        $namespace = 'Hellofresh\Client\Api\Models\\';
+        $class = '{{returnType}}';
+        $fqcn = $class;
+        if($class != ''){
+            $fqcn = $namespace . $class;
+        }
+        $responseObject = $this->apiClient->deserialize($response,$fqcn);
         return $responseObject;
         {{/returnType}}
     }
