--- a/modules/swagger-codegen/src/main/resources/php/composer.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/composer.mustache
@@ -1,5 +1,5 @@
 {
-  "name": "{{invokerPackage}}/{{invokerPackage}}-php",
+  "name": "hellofresh/client-php",
   "description": "{{description}}",
   "keywords": [
     "swagger",
