removed unneccessary packages

--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/composer.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/composer.mustache
@@ -1,5 +1,5 @@
 {
-  "name": "hellofresh/client-php",
+  "name": "hellofresh/php-client",
   "description": "{{description}}",
   "keywords": [
     "swagger",
@@ -7,12 +7,16 @@
     "sdk",
     "api"
   ],
-  "homepage": "http://swagger.io",
+  "homepage": "http://api.hellofresh.com",
   "license": "Apache v2",
   "authors": [
     {
       "name": "Swagger and contributors",
       "homepage": "https://github.com/swagger-api/swagger-codegen"
+    },
+    {
+      "name": "HelloFresh",
+      "homepage": "https://github.com/hellofresh"
     }
   ],
   "require": {
