changed templates for serialization

--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshModelResponse.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshModelResponse.mustache
@@ -1,7 +1,47 @@
 <?php namespace HelloFresh\Api\PhpClient;
 
+use DateTime;
+
 class HelloFreshModelResponse extends HelloFreshResponse {
 
+  public function deserializeData($className, $data = null) {
+    $data = $this->getResponseData();
+    $this->recursiveAppointance($className, $data);
+    $this->responseData = $data;
+  }
 
+  public function recursiveAppointance($className, &$data) {
+    if (strpos($className, 'array[') === 0) {
+      $subClassName = substr($className, 6, -1);
+
+      $values = [];
+      foreach ($data as $value) {
+        $values[] = $this->recursiveAppointance($subClassName, $value);
+      }
+
+      $data = $values;
+    } else if ($className === 'DateTime') {
+      $data = new DateTime($data);
+    } else if (in_array($className, ['string', 'int', 'float', 'bool'])) {
+      $value = (is_object($data) || is_array($data)) ? json_encode($data) : $data;
+      settype($value, $className);
+
+      $data = $value;
+    } else {
+      if (class_exists($className)) {
+        $instance = new $className();
+
+        foreach ($className::$swaggerTypes as $property => $type) {
+          if (isset($data->$property)) {
+            $instance->$property = $this->recursiveAppointance($type, $data->$property);
+          }
+        }
+
+        $data = $instance;
+      }
+    }
+
+    return $data;
+  }
 
 }
