--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshErrorResponse.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshErrorResponse.mustache
@@ -1,3 +1,3 @@
 <?php namespace HelloFresh\Api\PhpClient;
 
-class HelloFreshModelResponse extends HelloFreshResponse {}
+class HelloFreshErrorResponse extends HelloFreshResponse {}
