--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshResponse.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshResponse.mustache
@@ -1,33 +1,12 @@
 <?php namespace HelloFresh\Api\PhpClient;
 
-class HelloFreshResponse {
+interface HelloFreshResponse {
 
-  protected $request;
-  protected $responseData;
-  protected $rawResponse;
-  protected $httpStatusCode;
+  public function __construct(HelloFreshRequest $request, $responseData, $rawResponse, $httpStatusCode);
 
-  public function __construct(HelloFreshRequest $request, $responseData, $rawResponse, $httpStatusCode) {
-    $this->request = $request;
-    $this->responseData = $responseData;
-    $this->rawResponse = $rawResponse;
-    $this->httpStatusCode = $httpStatusCode;
-  }
-
-  public function getRequest() {
-    return $this->request;
-  }
-
-  public function getResponseData() {
-    return $this->responseData;
-  }
-
-  public function getRawResponse() {
-    return $this->rawResponse();
-  }
-
-  public function getHttpStatusCode() {
-    return $this->httpStatusCode;
-  }
+  public function getRequest();
+  public function getResponseData();
+  public function getRawResponse();
+  public function getHttpStatusCode();
 
 }
