--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
@@ -21,7 +21,7 @@ class {{classname}} implements ArrayAccess {
   public ${{name}};{{/vars}}
 
   public function __construct(array $data = []) {
-    {{#vars}}$this->{{name}} = @$data['{{name}}'];{{#hasMore}}
+    {{#vars}}$this->{{name}} = isset($data['{{name}}']) ? $data['{{name}}'] : null;{{#hasMore}}
     {{/hasMore}}{{/vars}}
   }
 
