--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
@@ -11,6 +11,7 @@ class {{classname}} {
    *
 {{#allParams}}   * @param {{dataType}} ${{paramName}} {{description}} {{^optional}}(required){{/optional}}{{#optional}}(optional){{/optional}}
 {{/allParams}}   * @return {{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}void{{/returnType}}|HelloFresh\Api\PhpClient\HelloFreshResponse
+   * @throws HelloFresh\Api\PhpClient\Exception\HelloFreshClientException
    */
   public static function {{nickname}}($options = []) {
     $request = new HelloFreshRequest(
