--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
@@ -1,6 +1,13 @@
 <?php namespace HelloFresh\Api\PhpClient;
 
 {{#operations}}
+/**
+ * Short-hand functions to the {{classname}} API
+ *
+ * @author    Pepijn Senders <pepijn.senders@hellofresh.de>
+ * @package   hellofresh/php-client
+ *
+ */
 class {{classname}} {
 
   {{#operation}}
