removed type casting

--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
@@ -16,7 +16,7 @@ class {{classname}} {
    *
    * {{{summary}}}
    *
-{{#returnType}}   * @param   array[{{returnType}}]   $parameters{{/returnType}}{{^returnType}}   * @param   array   $parameters{{/returnType}}
+   * @param   array   $parameters
    * @param   array   $cacheOptions
    * @return  {{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}void{{/returnType}}|HelloFresh\Api\PhpClient\HelloFreshResponse
    * @throws  HelloFresh\Api\PhpClient\Exception\HelloFreshClientException
