--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
@@ -32,6 +32,7 @@ class {{classname}} {
    * Create {{classname}} entity with array of keys with corresponding values
    *
    * @param array $data
+   * @return void
    */
   public function __construct(array $data = []) {
     {{#vars}}$this->{{name}} = isset($data['{{name}}']) ? $data['{{name}}'] : null;{{#hasMore}}
