--- a/modules/swagger-codegen/src/main/resources/hellofreshpython/README.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshpython/README.mustache
@@ -1,25 +1,32 @@
 # Swagger Generated Python client
 
+### Installation Instructions using [setuptools](https://pypi.python.org/pypi/setuptools):
 
-Usage example, based on the swagger petstore:
+```bash
+sudo python setup.py install
+```
+### Installation using pip
+```bash
+pip install hfpython
+```
+
+### Installation from git using pip 
+
+```bash
+sudo pip install git+ssh://git@github.com/hellofresh/python-client.git@master
+```
+
+# Usage example:
 
 ```python
 # include the client module
-from client import *
+from hfpython import *
 
-# build a client connection.  In this example, we are passing the hostname as arg0, and
-# sending a header with name `api_key` and value `special-key` on each call to the api.
+# build a client connection. 
 
-client = swagger.ApiClient('http://petstore.swagger.io/v2', 'api_key', 'special-key')
+client = swagger.ApiClient('https://api-v2-staging.hellofresh.com')
 
-# create the PetApi class with the client we just created
-petApi = PetApi.PetApi(client)
-
-# call the API and fetch a pet, with petId=3
-pet = petApi.getPetById(petId=3)
-
-# write it into pretty JSON
-json = client.sanitizeForSerialization(pet)
-print json
-{'category': {'category': None, 'status': None, 'name': 'string', 'tags': None, 'photoUrls': None, 'id': 0L}, 'status': {'category': None, 'status': None, 'name': None, 'tags': None, 'photoUrls': None, 'id': None}, 'name': 'foogly', 'tags': [{'id': 0L, 'name': 'string'}], 'photoUrls': ['string'], 'id': 3L}
+# Get an Oauth Token
+auth = AuthApi.AuthApi(client)
+auth.clientLogin(grant_type="client_credentials", client_id="hellofresh-bi", client_secret="client_secret", scope="public")
 ```
