--- a/modules/swagger-codegen/src/main/resources/hellofreshpython/swagger.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshpython/swagger.mustache
@@ -204,6 +204,11 @@ class ApiClient(object):
         Returns:
             object -- deserialized object"""
 
+        if objClass == "object":
+            try:
+                return json.loads(obj)
+            except:
+                return obj
         # Have to accept objClass as string or actual type. Type could be a
         # native Python type, or one of the model classes.
         if type(objClass) == str:
@@ -242,13 +247,17 @@ class ApiClient(object):
                 elif 'list[' in attrType:
                     match = re.match('list\[(.*)\]', attrType)
                     subClass = match.group(1)
-                    subValues = []
-                    if not value:
-                        setattr(instance, attr, None)
+
+                    if subClass == "object":
+                        setattr(instance, attr, value)
                     else:
-                        for subValue in value:
-                            subValues.append(self.deserialize(subValue, subClass))
-                    setattr(instance, attr, subValues)
+                        subValues = []
+                        if not value:
+                            setattr(instance, attr, None)
+                        else:
+                            for subValue in value:
+                                subValues.append(self.deserialize(subValue, subClass))
+                        setattr(instance, attr, subValues)
                 else:
                     setattr(instance, attr, self.deserialize(value, attrType))
 
